--- a/src/Skybrud.Social.Umbraco/App_Plugins/Skybrud.Social/LinkedIn/OAuth/PreValueEditor.html
+++ b/src/Skybrud.Social.Umbraco/App_Plugins/Skybrud.Social/LinkedIn/OAuth/PreValueEditor.html
@@ -36,7 +36,7 @@
         <label>
             <div>
                 <span>App Permissions</span>
-                <small>LinkedIn permissions that will be asked in your app</small>
+                <small>Permissions asked by your LinkedIn app</small>
             </div>
         </label>
         <div style="clear: both;"></div>
