--- a/src/Skybrud.Social.Umbraco/App_Plugins/Skybrud.Social/LinkedIn/OAuth/PropertyEditor.html
+++ b/src/Skybrud.Social.Umbraco/App_Plugins/Skybrud.Social/LinkedIn/OAuth/PropertyEditor.html
@@ -15,7 +15,7 @@
             <div style="margin-bottom: 5px;">
                 <span style="font-size: 12px;">Company: 
                     <a href="https://www.linkedin.com/company/{{model.value.company}}" target="_blank">https://www.linkedin.com/company/</a>
-                    <input type="text" value="{{model.value.company}}" ng-model="model.value.company" />
+                    <input type="text" ng-model="model.value.company" />
                 </span>
             </div>
                 
